--- a/configs/.config/waybar/config.jsonc
+++ b/configs/.config/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
     "layer": "top",
-    "height": 34,
-    "spacing": 34,
+    "height": 30,
+    "spacing": 30,
     "modules-left": [
         "hyprland/workspaces",
         "hyprland/submap"
@@ -10,13 +10,13 @@
         "hyprland/window"
     ],
     "modules-right": [
+        "tray",
         "wlr/taskbar",
         "battery",
         "network",
         "custom/settings",
         "clock"
     ],
-    // Left Modules
     "hyprland/workspaces": {
         "format": "{icon}",
         "format-icons": {
@@ -37,22 +37,18 @@
         "format": "{}",
         "tooltip": false
     },
-    // Center Modules
     "hyprland/window": {
         "format": "{:.40}",
         "separate-outputs": false
     },
-    // Right modules
     "wlr/taskbar": {
         "format": "{icon}",
-        "rotate": 0,
-        "icon-size": 18,
-        "spacing": 0,
         "tooltip-format": "{title}",
         "on-click": "activate",
         "on-click-middle": "close",
         "ignore-list": [
-            "Alacritty"
+            "Alacritty",
+            "Kitty"
         ],
         "app_ids-mapping": {
             "firefoxdeveloperedition": "firefox-developer-edition"
