improve UI and path selector in installer

--- a/configs/.config/hypr/exec.conf
+++ b/configs/.config/hypr/exec.conf
@@ -1,6 +1,7 @@
 exec-once = waybar
+exec-once = hyprpaper
 exec-once = blueman-applet 
 exec-once = nm-applet --indicator 
 exec-once = dunst 
-exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
-exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
+exec-once = wl-paste --type text --watch cliphist store 
+exec-once = wl-paste --type image --watch cliphist store 
