--- a/configs/.config/hypr/ui.conf
+++ b/configs/.config/hypr/ui.conf
@@ -1,41 +1,52 @@
-source = ~/.config/hypr/colors.conf
+$white = rgba(ffffffcc)
+$black = rgba(000000cc)
+$background = rgba(00000033)
+$border_active = rgba(707070ff)
+$border_inactive = rgba(393939ff)
 
 general {
-    border_size               = 2
-    gaps_in                   = 2 
-    gaps_out                  = 0
+    border_size               = 1
+    gaps_in                   = 4 
+    gaps_out                  = 12 
     allow_tearing             = false
-    col.active_border         = $primary-color
-    col.inactive_border       = $inactive-color
-    col.nogroup_border_active = $secondary-color
-    col.nogroup_border        = $inactive-color
+
+    col.active_border = $border_active
+    col.inactive_border = $border_inactive
+
+    col.nogroup_border_active = $border_active
+    col.nogroup_border        = $border_inactive
     no_border_on_floating     = false
     cursor_inactive_timeout   = 30 
 }
 
 decoration {
-    active_opacity      = 1.0
-    inactive_opacity    = 0.8
-    rounding            = 4 
-    drop_shadow         = false 
+    active_opacity = 1 
+    inactive_opacity = 0.8
+    rounding = 10 
+
     blur {
         enabled = true
-        size    = 8 
-        passes  = 2
-        noise   = 0.2
+        size    = 12 
+        passes  = 4
+        noise   = 0.0
     }
+
+    drop_shadow = yes 
+    shadow_range = 8
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
 }
 
 group {
-    col.border_active          = $secondary-color
-    col.border_inactive        = $inactive-color
-    col.border_locked_active   = $warning-color
-    col.border_locked_inactive = $inactive-color
+    col.border_active          = $border_active
+    col.border_inactive        = $border_inactive
+    col.border_locked_active   = $border_active
+    col.border_locked_inactive = $border_inactive
     groupbar {
-        col.active          = $secondary-color
-        col.inactive        = $inactive-color
-        col.locked_active   = $warning-color
-        col.locked_inactive = $inactive-color
+        col.active          = $border_active
+        col.inactive        = $border_inactive
+        col.locked_active   = $border_active
+        col.locked_inactive = $border_inactive
     }
 }
 
