--- a/configs/.config/hypr/monitor.conf
+++ b/configs/.config/hypr/monitor.conf
@@ -1,2 +1,11 @@
-# Thinkpad t14 Gen2
-monitor = eDP-1, 1920x1080@60.05, 0x0, 1
+# To list all available monitors (active and inactive):
+# hyprctl monitors all
+
+# The general config of a monitor looks like this
+# monitor= name, resolution, position, scale
+
+# Recommended rule for quickly plugging in random monitors:
+# monitor =, preferred, auto, 1
+
+monitor = eDP-1, preferred, 1920x0, 1
+monitor = HDMI-A-1, preferred, 0x0, 1
