--- a/configs/.config/hypr/windowrules.conf
+++ b/configs/.config/hypr/windowrules.conf
@@ -1,2 +1,11 @@
 # Kitty
-windowrulev2 = opacity 0.90 1, class:^(kitty)$
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+windowrulev2 = pin, title:^(Firefox)$
+windowrulev2 = float, title:^(Firefox)$
+windowrulev2 = size 320 180, title:^(Firefox)$
+windowrulev2 = move 100%-340 100%-200, title:^(Firefox)$
+
+layerrule = xray 1, waybar
+layerrule = blur, waybar
+layerrule = ignorezero, waybar 
