rofi added and UI improved

--- a/configs/.config/hypr/keybindings.conf
+++ b/configs/.config/hypr/keybindings.conf
@@ -1,6 +1,6 @@
 $terminal = kitty
 $fileManager = nemo 
-$menu = wofi --show drun
+$menu = rofi -show drun
 $browser = firefox-developer-edition
 
 $mainMod = SUPER
@@ -9,7 +9,6 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, F, exec, $browser
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, W, togglefloating, 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, L, exec, swaylock
 
@@ -56,7 +55,8 @@ bindl  = , XF86AudioNext, exec, playerctl next
 bindl  = , XF86AudioPrev, exec, playerctl previous
 bindl  = , XF86AudioMute, exec, pamixer -t
 bindl  = , XF86AudioMicMute, exec, pamixer -t
-bindel = , XF86AudioRaiseVolume, exec, pamixer -i 5
+bindl  = , XF86AudioMicMute,exec,pamixer --default-source -t
+bindel = , XF86AudioRaiseVolume, exec, pamixer --allow-boost -i 5
 bindel = , XF86AudioLowerVolume, exec, pamixer -d 5
         
 # Funcion keys for brightness
