--- a/configs/.config/hypr/ui.conf
+++ b/configs/.config/hypr/ui.conf
@@ -1,13 +1,10 @@
-$white = rgba(ffffffcc)
-$black = rgba(000000cc)
-$background = rgba(00000033)
-$border_active = rgba(707070ff)
+$border_active = rgba(282A36ff)
 $border_inactive = rgba(393939ff)
 
 general {
-    border_size               = 1
-    gaps_in                   = 4 
-    gaps_out                  = 12 
+    border_size               = 0
+    gaps_in                   = 0 
+    gaps_out                  = 0 
     allow_tearing             = false
 
     col.active_border = $border_active
@@ -16,13 +13,13 @@ general {
     col.nogroup_border_active = $border_active
     col.nogroup_border        = $border_inactive
     no_border_on_floating     = false
-    cursor_inactive_timeout   = 30 
+    cursor_inactive_timeout   = 45 
 }
 
 decoration {
     active_opacity = 1 
     inactive_opacity = 0.8
-    rounding = 10 
+    rounding = 0 
 
     blur {
         enabled = true
@@ -31,10 +28,7 @@ decoration {
         noise   = 0.0
     }
 
-    drop_shadow = yes 
-    shadow_range = 8
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow = false 
 }
 
 group {
