feat: Rofi added and improves UI (#4)
* chore: more packages to install and colors fix in log

* chore: color fix change shell

* chore: chmod +x for all scripts to execute

* chore: fix target path for install symlink

* chore: improve blur in waybar

* chore: README update

* improve UI and path selector in installer

* rofi added and UI improved

* chore: color fix on install, fix target path do create symlink and add some packages for hyprland (#2)

* chore: more packages to install and colors fix in log

* chore: color fix change shell

* chore: chmod +x for all scripts to execute

* chore: fix target path for install symlink

* improve UI and path selector in installer

--- a/configs/.config/hypr/ui.conf
+++ b/configs/.config/hypr/ui.conf
@@ -1,49 +1,46 @@
-$background-color = rgb(282a36)
-$text-color       = rgb(f8f8f2)
-$primary-color    = rgb(bd93f9)
-$secondary-color  = rgb(ff79c6)
-$warning-color    = rgb(ffb86c)
-$error-color      = rgb(ff5555)
-$sucess-color     = rgb(50fA7b)
-$inactive-color   = rgb(6272a4)
-
+$border_active = rgba(282A36ff)
+$border_inactive = rgba(393939ff)
 
 general {
-    border_size               = 2
-    gaps_in                   = 2 
-    gaps_out                  = 0
+    border_size               = 0
+    gaps_in                   = 0 
+    gaps_out                  = 0 
     allow_tearing             = false
-    col.active_border         = $primary-color
-    col.inactive_border       = $inactive-color
-    col.nogroup_border_active = $secondary-color
-    col.nogroup_border        = $inactive-color
+
+    col.active_border = $border_active
+    col.inactive_border = $border_inactive
+
+    col.nogroup_border_active = $border_active
+    col.nogroup_border        = $border_inactive
     no_border_on_floating     = false
-    cursor_inactive_timeout   = 30 
+    cursor_inactive_timeout   = 45 
 }
 
 decoration {
-    active_opacity      = 1.0
-    inactive_opacity    = 0.8
-    rounding            = 4 
-    drop_shadow         = false 
+    active_opacity = 1 
+    inactive_opacity = 0.8
+    rounding = 0 
+
     blur {
         enabled = true
-        size    = 8 
-        passes  = 2
-        noise   = 0.2
+        size    = 12 
+        passes  = 4
+        noise   = 0.0
     }
+
+    drop_shadow = false 
 }
 
 group {
-    col.border_active          = $secondary-color
-    col.border_inactive        = $inactive-color
-    col.border_locked_active   = $warning-color
-    col.border_locked_inactive = $inactive-color
+    col.border_active          = $border_active
+    col.border_inactive        = $border_inactive
+    col.border_locked_active   = $border_active
+    col.border_locked_inactive = $border_inactive
     groupbar {
-        col.active          = $secondary-color
-        col.inactive        = $inactive-color
-        col.locked_active   = $warning-color
-        col.locked_inactive = $inactive-color
+        col.active          = $border_active
+        col.inactive        = $border_inactive
+        col.locked_active   = $border_active
+        col.locked_inactive = $border_inactive
     }
 }
 
