--- a/configs/.config/hypr/hyprpaper.conf
+++ b/configs/.config/hypr/hyprpaper.conf
@@ -1,17 +1,8 @@
-preload = /path/to/image.png
-#if more than one preload is desired then continue to preload other backgrounds
-preload = /path/to/next_image.png
-# .. more preloads
+$wallpaper_path = ~/Clone/oh-my-hyprland/assets/wallpapers/mountain.jpg
 
-#set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = monitor1,/path/to/image.png
-#if more than one monitor in use, can load a 2nd image
-wallpaper = monitor2,/path/to/next_image.png
-# .. more monitors
+preload = $wallpaper_path
 
-#enable splash text rendering over the wallpaper
-splash = true
+wallpaper = eDP-1,$wallpaper_path
+wallpaper = HDMI-A-1,$wallpaper_path
 
-#fully disable ipc
-# ipc = off
-
+splash = false 
