--- a/configs/.config/waybar/config.jsonc
+++ b/configs/.config/waybar/config.jsonc
@@ -1,95 +1,138 @@
 {
-    "layer": "top",
-    "height": 30,
-    "spacing": 30,
-    "modules-left": [
-        "hyprland/workspaces",
-        "hyprland/submap"
+  "layer": "top",
+  "height": 30,
+  "spacing": 15,
+  "modules-left": [
+    "clock",
+    "hyprland/workspaces"
+  ],
+  "modules-center": [
+    "hyprland/window"
+  ],
+  "modules-right": [
+    "wlr/taskbar",
+    "backlight",
+    "cpu",
+    "temperature",
+    "memory",
+    "pulseaudio",
+    "battery",
+    "network",
+    "tray"
+  ],
+  "hyprland/workspaces": {
+    "format": "{icon}",
+    "format-icons": {
+      "1": "1",
+      "2": "2",
+      "3": "3",
+      "4": "4",
+      "5": "5",
+      "6": "6",
+      "7": "7",
+      "8": "8",
+      "9": "9",
+      "default": "1"
+    },
+    "on-click": "activate"
+  },
+  "hyprland/window": {
+    "format": "{:.60}",
+    "separate-outputs": false
+  },
+  "wlr/taskbar": {
+    "format": "{icon}",
+    "tooltip-format": "{title}",
+    "on-click": "activate",
+    "on-click-middle": "close",
+    "ignore-list": [
+      "Alacritty",
+      "Kitty"
     ],
-    "modules-center": [
-        "hyprland/window"
-    ],
-    "modules-right": [
-        "tray",
-        "wlr/taskbar",
-        "battery",
-        "network",
-        "custom/settings",
-        "clock"
-    ],
-    "hyprland/workspaces": {
-        "format": "{icon}",
-        "format-icons": {
-            "1": "1",
-            "2": "2",
-            "3": "3",
-            "4": "4",
-            "5": "5",
-            "6": "6",
-            "7": "7",
-            "8": "8",
-            "9": "9",
-            "default": "1"
-        },
-        "on-click": "activate"
-    },
-    "hyprland/submap": {
-        "format": "{}",
-        "tooltip": false
-    },
-    "hyprland/window": {
-        "format": "{:.40}",
-        "separate-outputs": false
-    },
-    "wlr/taskbar": {
-        "format": "{icon}",
-        "tooltip-format": "{title}",
-        "on-click": "activate",
-        "on-click-middle": "close",
-        "ignore-list": [
-            "Alacritty",
-            "Kitty"
-        ],
-        "app_ids-mapping": {
-            "firefoxdeveloperedition": "firefox-developer-edition"
-        }
-    },
-    "battery": {
-        "states": {
-            "good": 80,
-            "warning": 30,
-            "critical": 20
-        },
-        "format": "{icon}",
-        "rotate": 270,
-        "format-charging": "󰂄",
-        "format-plugged": "󰂄",
-        "format-icons": [
-            "󰂎",
-            "󰁺",
-            "󰁻",
-            "󰁼",
-            "󰁽",
-            "󰁾",
-            "󰁿",
-            "󰂀",
-            "󰂁",
-            "󰂂",
-            "󰁹"
-        ]
-    },
-    "network": {
-        "format-wifi": " ",
-        "format-ethernet": "󰈁",
-        "format-disconnected": "Disconnected ⚠ "
-    },
-    "custom/settings": {
-        "format": " ",
-        "on-click": ""
-    },
-    "clock": {
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format": "{:%a %b %d %I:%M %p}  ",
-        "format-alt": "{:%Y-%m-%d}  "
+    "app_ids-mapping": {
+      "firefoxdeveloperedition": "firefox-developer-edition"
     }
+  },
+  "battery": {
+    "states": {
+      "good": 90,
+      "warning": 30,
+      "critical": 15
+    },
+    "format": "{capacity}% {icon}",
+    "format-charging": "{capacity}% ",
+    "format-plugged": "{capacity}% 󰚥 ",
+    "format-alt": "{time} {icon}",
+    "format-icons": [
+      "  ",
+      "  ",
+      "  ",
+      "  ",
+      "  "
+    ]
+  },
+  "network": {
+    "format-wifi": " ",
+    "format-ethernet": "󰈁",
+    "format-disconnected": "Disconnected ⚠ "
+  },
+  "clock": {
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+    "format": "{:%a %b %d %I:%M %p}  ",
+    "format-alt": "{:%Y-%m-%d}  "
+  },
+  "pulseaudio": {
+    "format": "{volume}% {icon}",
+    "format-bluetooth": "{volume}% {icon}",
+    "format-muted": "󰝟 ",
+    "format-icons": {
+      "headphones": " ",
+      "handsfree": " ",
+      "headset": " ",
+      "phone": " ",
+      "portable": " ",
+      "car": " ",
+      "default": [
+        " ",
+        " ",
+        " "
+      ]
+    },
+    "scroll-step": 1,
+    "on-click": "pavucontrol"
+  },
+  "cpu": {
+    "format": "{usage}%  ",
+    "tooltip": false
+  },
+  "memory": {
+    "format": "{}%  "
+  },
+  "temperature": {
+    "critical-threshold": 80,
+    "format": "{temperatureC}°C {icon}",
+    "format-icons": [
+      "",
+      "",
+      ""
+    ]
+  },
+  "tray": {
+    "icon-size": 16,
+    "spacing": 10
+  },
+  "backlight": {
+    "format": "{percent}% {icon}",
+    "format-icons": [
+      " ",
+      " ",
+      " ",
+      " ",
+      " ",
+      " ",
+      " ",
+      " ",
+      " "
+    ]
+  }
 }
