--- a/configs/.config/hypr/keybindings.conf
+++ b/configs/.config/hypr/keybindings.conf
@@ -9,7 +9,7 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, F, exec, $browser
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, R, exec, $menu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
 bind = $mainMod, L, exec, swaylock
 
 # Move focus
