feat: tokyonight theming, waybar improves and other ui improves

--- a/configs/.config/hypr/hyprpaper.conf
+++ b/configs/.config/hypr/hyprpaper.conf
@@ -1,8 +1,9 @@
-$wallpaper_path = ~/Clone/oh-my-hyprland/assets/wallpapers/mountain.jpg
+$wallpaper_path = ~/Clone/oh-my-hyprland/assets/wallpapers/wallpaper.jpg
 
 preload = $wallpaper_path
 
 wallpaper = eDP-1,$wallpaper_path
+wallpaper = DP-1,$wallpaper_path
 wallpaper = HDMI-A-1,$wallpaper_path
 
 splash = false 
