--- a/configs/.config/hypr/keybindings.conf
+++ b/configs/.config/hypr/keybindings.conf
@@ -12,6 +12,13 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
 bind = $mainMod, L, exec, swaylock
 
+# Screenshot
+$saved_dir = "$HOME/Pictures/screenshot.png"
+
+bind = Ctrl, Print, exec, grimblast --notify --freeze copysave screen $saved_dir && swappy -f $saved_dir # all monitors screenshot capture
+bind = , Print, exec, grimblast --notify --cursor copysave output $saved_dir && swappy -f $saved_dir # monitor screenshot capture
+bind = $mainMod+Shift, P, exec, grimblast --notify --freeze copysave area $saved_dir && swappy -f $saved_dir  # partial screenshot capture
+
 # Move focus
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
