--- a/configs/.config/hypr/monitor.conf
+++ b/configs/.config/hypr/monitor.conf
@@ -7,5 +7,6 @@
 # Recommended rule for quickly plugging in random monitors:
 # monitor =, preferred, auto, 1
 
+monitor = DP-1, preferred, 1920x0, 1
 monitor = eDP-1, preferred, 1920x0, 1
 monitor = HDMI-A-1, preferred, 0x0, 1
