--- a/configs/.config/kitty/kitty.conf
+++ b/configs/.config/kitty/kitty.conf
@@ -1,12 +1,12 @@
-font_family      Hack Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-font_size 10.0
+font_family      SFMono Nerd Font
+bold_font        true 
+italic_font      true 
+bold_italic_font true 
+font_size 12.0
 window_padding_width 0
 hide_window_decorations yes
 confirm_os_window_close 1
 
 # background_opacity 0.60
 
-include dracula.conf
+include tokyonight-night.conf
