fix: font style auto for kitty

--- a/configs/.config/kitty/kitty.conf
+++ b/configs/.config/kitty/kitty.conf
@@ -1,8 +1,10 @@
 font_family      SFMono Nerd Font
-bold_font        true 
-italic_font      true 
-bold_italic_font true 
+bold_font        auto 
+italic_font      auto 
+bold_italic_font auto 
 font_size 12.0
+disable_ligatures never
+
 window_padding_width 0
 hide_window_decorations yes
 confirm_os_window_close 1
