feat: vim mode for window managing

--- a/configs/.config/hypr/keybindings.conf
+++ b/configs/.config/hypr/keybindings.conf
@@ -20,10 +20,10 @@ bind = , Print, exec, grimblast --notify --cursor copysave output $saved_dir && 
 bind = $mainMod+Shift, P, exec, grimblast --notify --freeze copysave area $saved_dir && swappy -f $saved_dir  # partial screenshot capture
 
 # Move focus
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, l, movefocus, r
 
 # Switch workspaces
 bind = $mainMod, 1, workspace, 1
